build admin user management page + corresponding backend unpgrades